--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,17 +1,29 @@
+@import "./mixins.scss";
 @import "./variables.scss";
 
-@mixin font() {
-  font-family: "Raleway", sans-serif;
-  font-weight: normal;
+* {
+  box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
+body {
   @include font();
-  color: $foreground-color;
+  color: $color-foreground;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
 }
 
 *::placeholder {
-  @include font();
+  @include font($font-size: unset);
+}
+
+a {
+  color: inherit;
+  cursor: inherit;
+  text-decoration: inherit;
 }
