--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,15 @@
-$foreground-color: #1d1f22;
-$primary-color: #5ece7b;
+// Colors
+$color-foreground: #1d1f22;
+$color-primary: #5ece7b;
+
+// Font Sizes
+$font-size-normal: 1rem;
+
+// Font Weights
+$font-weight-normal: 400;
+$font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
+
+// Animation Times
+$animation-time-quick: 0.15s;
