--- a/src/components/ui/Select/Select.style.scss
+++ b/src/components/ui/Select/Select.style.scss
@@ -23,6 +23,7 @@
 
     margin-left: margin-base(2);
     transform: rotate(0deg);
+    stroke: $color-foreground;
 
     transition: transform $animation-time-quick linear;
 
