Added category and currency services

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@
 $color-foreground: #1d1f22;
 $color-primary: #5ece7b;
 $color-surface: #ffffff;
+$color-background: #ffffff;
 $color-disabled: #a6a6a6;
 
 // Font Sizes
