--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $color-disabled: #a6a6a6;
 
 // Font Sizes
 $font-size-normal: 1rem;
+$font-size-huge: 2.625rem;
 
 // Font Weights
 $font-weight-normal: 400;
@@ -18,4 +19,7 @@ $font-weight-bold: 700;
 $animation-time-quick: 0.15s;
 
 // Shadows
-$shadow-extra-huge: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+$shadow-normal: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
+
+// Padding
+$padding-page-base: 20;
