Added paginator component

--- a/src/components/display/ProductCard/ProductCard.style.scss
+++ b/src/components/display/ProductCard/ProductCard.style.scss
@@ -58,7 +58,7 @@ $size: space-base(356px);
     visibility: hidden;
 
     svg {
-      fill: $color-on-primary;
+      color: $color-on-primary;
     }
   }
 
