--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -26,3 +26,13 @@
   -webkit-box-shadow: $shadow;
   box-shadow: $shadow;
 }
+
+@mixin position-full($position: absolute) {
+  position: $position;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
+}
