--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $color-on-primary: #ffffff;
 $color-surface: #ffffff;
 $color-background: #ffffff;
 $color-disabled: #a6a6a6;
+$color-on-disabled: $color-foreground;
 
 // Font Sizes
 $font-size-normal: 1rem;
