--- a/src/components/navbar/Navbar/Navbar.style.scss
+++ b/src/components/navbar/Navbar/Navbar.style.scss
@@ -6,6 +6,7 @@
   @include fixed-height(space-base(80px));
   padding: 0 padding-base($padding-page-base);
   display: flex;
+  z-index: 2;
 
   &__container {
     display: flex;
