--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -15,5 +15,7 @@
   &__view {
     @include position-full(absolute);
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
   }
 }
