--- a/src/components/product/ProductCard/ProductCard.style.scss
+++ b/src/components/product/ProductCard/ProductCard.style.scss
@@ -1,6 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/mixins";
-@import "src/styles/variables";
+@import "src/styles";
 
 $size: space-base(356px);
 
@@ -8,6 +6,7 @@ $size: space-base(356px);
   @include fixed-width($size);
   display: flex;
   flex-direction: column;
+  user-select: none;
 
   &__image-container {
     position: relative;
@@ -18,7 +17,9 @@ $size: space-base(356px);
   &__image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
   }
 
   &__details {
@@ -69,7 +70,7 @@ $size: space-base(356px);
 
     &:hover {
       box-shadow: $shadow-normal;
-      z-index: 1;
+      z-index: $z-index-product-card;
 
       .product-card__float-button {
         visibility: visible;
@@ -82,11 +83,7 @@ $size: space-base(356px);
   }
 
   &__out-of-stock {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    @include position-full(absolute);
 
     display: flex;
     justify-content: center;
