--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -36,3 +36,10 @@
   margin: 0;
   padding: 0;
 }
+
+@mixin position-center($position: fixed) {
+  position: $position;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
