--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $font-size-normal: 1rem;
 $font-size-normal-large: 1.125rem;
 $font-size-large: 1.5rem;
 $font-size-huge: 2.625rem;
+$font-size-colossal: 7rem;
 
 // Font Weights
 $font-weight-light: 300;
@@ -30,3 +31,11 @@ $shadow-normal: 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
 
 // Padding
 $padding-page-base: 20;
+
+// Size
+$size-navbar: 80px;
+
+// Z-Indexes
+$z-index-product-card: 1;
+$z-index-navbar: 2;
+$z-index-overlay: 1000;
