--- a/src/components/ui/Paginator/PaginatorItem/PaginatorItem.style.scss
+++ b/src/components/ui/Paginator/PaginatorItem/PaginatorItem.style.scss
@@ -1,6 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/mixins";
-@import "src/styles/variables";
+@import "src/styles";
 
 .paginator-item {
   display: inline-flex;
