--- a/src/components/navbar/CurrencySelector/CurrencySelectorItem/CurrencySelectorItem.style.scss
+++ b/src/components/navbar/CurrencySelector/CurrencySelectorItem/CurrencySelectorItem.style.scss
@@ -1,5 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/variables";
+@import "src/styles";
 
 .currency-selector-item {
   display: flex;
