--- a/src/components/navbar/Navbar/NavbarSelectedIndicator/NavbarSelectedIndicator.style.scss
+++ b/src/components/navbar/Navbar/NavbarSelectedIndicator/NavbarSelectedIndicator.style.scss
@@ -1,6 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/mixins";
-@import "src/styles/variables";
+@import "src/styles";
 
 .navbar-selected-indicator {
   $height: space-base(2px);
