--- a/src/components/ui/Select/SelectItems/SelectItems.style.scss
+++ b/src/components/ui/Select/SelectItems/SelectItems.style.scss
@@ -1,6 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/mixins";
-@import "src/styles/variables.scss";
+@import "src/styles";
 
 .select-items {
   @include box-shadow($shadow-normal);
