--- a/src/views/Category/CategoryView.style.scss
+++ b/src/views/Category/CategoryView.style.scss
@@ -1,6 +1,4 @@
-@import "src/styles/functions";
-@import "src/styles/mixins";
-@import "src/styles/variables";
+@import "src/styles";
 
 .category-view {
   display: flex;
