--- a/src/components/product/ProductShowcase/ProductShowcase.style.scss
+++ b/src/components/product/ProductShowcase/ProductShowcase.style.scss
@@ -1,6 +1,6 @@
 @import "src/styles";
 
-.product-display {
+.product-showcase {
   display: flex;
   flex-direction: column;
   align-items: center;
