--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $color-foreground: #1d1f22;
+$color-on-foreground: #ffffff;
 $color-primary: #5ece7b;
 $color-on-primary: #ffffff;
 $color-surface: #ffffff;
@@ -11,6 +12,7 @@ $color-on-disabled: $color-foreground;
 $font-size-normal: 1rem;
 $font-size-normal-large: 1.125rem;
 $font-size-large: 1.5rem;
+$font-size-large-huge: 1.875rem;
 $font-size-huge: 2.625rem;
 $font-size-colossal: 7rem;
 
